# ach-agent

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  NOTICE  PUBLISH.md  README.md  SECURITY.md  docker-compose.yml  example.yaml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/actions/setup-devtools/: action.yml
.github/workflows/: ci.yml  devtools-image.yml  docs.yml  release.yml
.planning/phases/01-config-schema-reshape-contract-v3/: 01-01-SUMMARY.md  01-02-SUMMARY.md
0.3.0/: 404.html  index.html
0.3.0/search/: search_index.json
deploy/helm/ach-agent/: Chart.yaml  values.yaml
deploy/kustomize/base/: deployment.yaml  kustomization.yaml  service.yaml
dev/: 404.html  index.html
dev/configuration/: index.html
dev/getting-started/: index.html
dev/references/: index.html
dev/references/2026-07-01-keyed-engine-pool/: index.html
dev/references/2026-07-01-router-pool-vs-legacy/: index.html
dev/references/2026-07-02-session-identity-and-bounds/: index.html
dev/references/2026-07-03-provider-by-model-type/: index.html
dev/references/2026-07-03-stats-observability/: index.html
dev/references/2026-07-05-hindsight-memory-facade/: index.html
dev/references/2026-07-23-pi-engine-driver/: index.html
dev/references/2026-07-23-pi-model-capability-and-thinking/: index.html
dev/references/2026-07-24-model-owned-thinking/: index.html
dev/schemas/: agent-config-v1.schema.json
dev/search/: search_index.json
docker/: sample-config.json  sample-config.yaml  stats.Dockerfile
docker/devtools/: Dockerfile
docker/mock-gitlab/: Dockerfile  app.py  requirements.txt
docker/mock-model/: Dockerfile  app.py  requirements.txt
docker/quickstart/: config.yaml  docker-compose.yaml
docs/: configuration.md  getting-started.md  index.md  requirements.txt
docs/plan/: CONTRACT_v3.md
docs/references/: 2026-07-01-keyed-engine-pool.md  2026-07-01-router-pool-vs-legacy.md  2026-07-02-session-identity-and-bounds.md  2026-07-03-provider-by-model-type.md  2026-07-03-stats-observability.md  2026-07-05-hindsight-memory-facade.md  2026-07-23-pi-engine-driver.md  2026-07-23-pi-model-capability-and-thinking.md  2026-07-24-model-owned-thinking.md  README.md
docs/schemas/: agent-config-v1.schema.json
docs/superpowers/plans/: 2026-06-25-channel-redraw.md  2026-06-25-conformance-regreen.md  2026-06-25-opencode-decruft-reconnect.md  2026-06-25-opencode-proxy-hydration.md  2026-06-30-codemem-memory-backend.md  2026-06-30-memory-bank-templating.md  2026-06-30-prompt-source-ach-state.md  2026-07-02-harness-security-preflight.md  2026-07-02-persistent-oc-session-map.md  2026-07-02-session-identity-and-bounds.md  2026-07-02-stats-container-a2.md  2026-07-02-stats-sink-harness-a1.md  2026-07-03-persist-oc-session-map.md  2026-07-04-a2a-async-lifecycle.md  2026-07-04-a2a-terminal-event-ids.md  2026-07-23-pi-model-runtime-parity-handoff-ach.md  2026-07-23-pi-model-runtime-parity.md  README.md
scripts/: dev.sh  e2e.sh  gen_schema.py  install-hooks.sh  list-prompt-files.py  pre-push-check.sh  r1_probe.md
src/ach_agent/: __init__.py  main.py
src/ach_agent/actions/: __init__.py  delivery.py  (+3 more)
src/ach_stats/api/: pyproject.toml
src/ach_stats/api/app/: __init__.py  aggregate.py  main.py  model_meta.py  reader.py
src/ach_stats/api/tests/: test_aggregate.py  test_model_meta.py  test_reader.py  test_routes.py
tests/: conftest.py  test_build_engine_prompt.py  test_engine_observability.py  test_filter_exclude.py  test_main_mcp_servers.py  test_main_memory_dispatch.py  test_main_preflight.py  test_main_repo_checkout.py  test_main_wiring.py  test_memory_templating.py  test_resolve_codemem.py  test_secret_forward_guard.py  test_session_store.py
tests/actions/: test_gitlab_comment.py
tests/channels/: test_a2a.py  test_cron.py  test_message_event_consent.py  test_queue.py  test_slack.py  test_telegram.py  test_tui.py  test_webhook.py
tests/config/: test_engine_type.py  test_hindsight_schema.py  test_mcp_servers_config.py  test_memory_union.py  test_repo_checkout_config.py  test_resolve_secret.py  test_schema.py  test_schema_artifact.py  test_secret_source.py
tests/conformance/: conftest.py  test_inv01_idempotency.py  test_inv02_prelane_order.py  test_inv03_finite_bounds.py  test_inv04_expire_non_silent.py  test_inv05_memory_fail_open.py  test_inv06_startup_deadline.py  test_inv07_a_prime_gate.py  test_inv08_model_no_channels.py  test_inv09_dual_delivery.py  test_inv10_fifo_per_session.py  test_inv11_secret_never_logged.py  test_inv12_secret_hygiene.py  test_inv13_egress_via_mcp.py
tests/e2e/: conftest.py  test_a2a_e2e.py  test_durability_e2e.py  test_gitlab_e2e.py  test_opencode_mcp_structured_e2e.py  test_pi_e2e.py  test_skeleton.py  test_slack_e2e.py  test_telegram_e2e.py
tests/engine/: conftest.py  test_a2a_egress.py  test_a2a_facade.py  test_client.py  test_codemem_opencode_config.py  test_context.py  test_events.py  test_hydrate.py  test_lifecycle.py  test_lifecycle_mcp.py  test_mcp_passthrough.py  test_mcp_proxy.py  test_metrics_registered.py  test_model_proxy.py  test_opencode_driver.py  test_pool.py  test_repo_archive.py  test_repo_facade.py  test_roundtrip.py  test_sanitized_env.py  test_secret_redaction.py  test_shim_identity.py  test_system_prompt.py  test_validator.py
tests/http/: test_app.py
tests/integration/: test_codemem_wiring.py
tests/memory/: test_backends_registry.py  test_facade.py  test_hindsight_client.py  test_memory_adapter.py  test_prepare_codemem.py  test_provision.py  test_wiring.py
tests/router/: conftest.py  test_bounds.py  test_dedup.py  test_expire.py  test_fifo_lane.py  test_lane.py  test_prelane_order.py  test_router.py  test_seam.py  test_slots.py
tests/security/: test_gates.py  test_preflight.py
tests/stats/: test_metrics.py  test_models.py  test_pi_turn_stat_parity.py  test_redact.py  test_sink.py  test_wire.py
tests/templating/: test_render.py
(+139 files in other folders)
