[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ach-agent"
version = "0.8.1"
description = "ACH Agent — execution plane harness for the ACH ecosystem"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "ACKstorm", email = "juancarlos.moreno@ackstorm.com" }]
keywords = ["ach", "agent", "opencode", "harness", "ai-agents", "router"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "aiohttp>=3.13.4",
    "structlog==26.1.0",
    "prometheus-client==0.25.0",
    "pydantic==2.13.4",
    "croniter>=6.0.0,<7",
    "a2a-sdk>=1.1.0,<2",
    "mcp>=1.28.0,<2",
    "httpx>=0.27.0",
    "redis>=5,<9",
    "fastapi==0.139.0",
    # plain uvicorn (no [standard]): the [standard] extras (uvloop, httptools, websockets,
    # watchfiles) add ~20MB of speedups this single-replica harness does not need. The
    # asyncio loop + h11 are plenty for the webhook/a2a/health surface.
    "uvicorn==0.50.2",
    "pyyaml>=6,<7",
]

[project.urls]
Homepage = "https://github.com/ackstorm/ach-agent"
Repository = "https://github.com/ackstorm/ach-agent"
Issues = "https://github.com/ackstorm/ach-agent/issues"
Changelog = "https://github.com/ackstorm/ach-agent/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.20",
    "mypy==2.1.0",
    "types-pyyaml>=6,<7",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.20",
    "mypy==2.1.0",
    "types-pyyaml>=6,<7",
    "mkdocs-material==9.7.7",
    "mike==2.1.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ach_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests covering multi-layer wiring (config → opencode.json); runs in the normal suite unless deselected",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PLW1514"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["croniter", "gateway.*"]
ignore_missing_imports = true
